pkgincludedir=$(includedir)/roq/client
pkginclude_HEADERS = \
	api.h \
	collector.h \
	config.h \
	data_frame.h \
	depth_builder.h \
	dispatcher.h \
	handler.h \
	batch_begin_event.h \
	batch_end_event.h \
	connection_status_event.h \
	custom_message.h \
	start_event.h \
	stop_event.h \
	timer_event.h
